# parking_patrol

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: build-package.yaml  check.yaml  colcon-test-build.yaml  pull-request-check-skip.yaml  pull-request-check-src.yaml  skip-colcon-test-build.yaml  test.yaml
parking_patrol/: CMakeLists.txt  package.xml
parking_patrol/config/: parking_patrol.yaml
parking_patrol/include/parking_patrol/: utils.hpp
parking_patrol/include/parking_patrol/classes/: spot_finder.hpp
parking_patrol/include/parking_patrol/ros/: parking_patrol_node.hpp  spot_finder_node.hpp
parking_patrol/launch/: parking_patrol.launch.py
parking_patrol/src/: parking_patrol.cpp
parking_patrol/src/classes/: spot_finder.cpp
parking_patrol/src/ros/: parking_patrol_node.cpp  spot_finder_node.cpp
parking_patrol_msgs/: CMakeLists.txt  package.xml
parking_patrol_msgs/srv/: FreeSpots.srv
parking_patrol_simulation/: CMakeLists.txt  package.xml
parking_patrol_simulation/launch/: simulation.launch.py
